--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="eventdate">June 12 at 8 pm</string>
     <string name="desc">Biggest party of the semester with DJ Snake and few more popular DJs at Deetee.</string>
     <string name="auth_failed">Authentication failed</string>
+    <string name="title_activity_test">Map</string>
 </resources>
